docs/api/qiskit/0.25/qiskit.opflow.expectations.AerPauliExpectation.mdx
---
title: AerPauliExpectation (v0.25)
description: API reference for qiskit.opflow.expectations.AerPauliExpectation in qiskit v0.25
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.expectations.AerPauliExpectation
---

<span id="qiskit-opflow-expectations-aerpauliexpectation" />

# qiskit.opflow\.expectations.AerPauliExpectation

<Class id="qiskit.opflow.expectations.AerPauliExpectation" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/opflow/expectations/aer_pauli_expectation.py" signature="AerPauliExpectation" modifiers="class">
  An Expectation converter for using Aer’s operator snapshot to take expectations of quantum state circuits over Pauli observables.

  ### \_\_init\_\_

  <Function id="qiskit.opflow.expectations.AerPauliExpectation.__init__" signature="__init__()">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                                                                   |                                                                                                                              |
  | ----------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.opflow.expectations.AerPauliExpectation.__init__ "qiskit.opflow.expectations.AerPauliExpectation.__init__")()                                | Initialize self.                                                                                                             |
  | [`compute_variance`](#qiskit.opflow.expectations.AerPauliExpectation.compute_variance "qiskit.opflow.expectations.AerPauliExpectation.compute_variance")(exp\_op) | Compute the variance of the expectation estimator.                                                                           |
  | [`convert`](#qiskit.opflow.expectations.AerPauliExpectation.convert "qiskit.opflow.expectations.AerPauliExpectation.convert")(operator)                           | Accept an Operator and return a new Operator with the Pauli measurements replaced by AerSnapshot-based expectation circuits. |

  ### compute\_variance

  <Function id="qiskit.opflow.expectations.AerPauliExpectation.compute_variance" signature="compute_variance(exp_op)">
    Compute the variance of the expectation estimator. Because Aer takes this expectation with matrix multiplication, the estimation is exact and the variance is always 0, but we need to return those values in a way which matches the Operator’s structure.

    **Parameters**

    **exp\_op** (`OperatorBase`) – The full expectation value Operator after sampling.

    **Return type**

    `Union`\[`list`, `float`]

    **Returns**

    The variances or lists thereof (if exp\_op contains ListOps) of the expectation value estimation, equal to 0.
  </Function>

  ### convert

  <Function id="qiskit.opflow.expectations.AerPauliExpectation.convert" signature="convert(operator)">
    Accept an Operator and return a new Operator with the Pauli measurements replaced by AerSnapshot-based expectation circuits.

    **Parameters**

    **operator** (`OperatorBase`) – The operator to convert.

    **Return type**

    `OperatorBase`

    **Returns**

    The converted operator.
  </Function>
</Class>

