docs/api/qiskit/0.37/qiskit.opflow.expectations.AerPauliExpectation.mdx
---
title: AerPauliExpectation (v0.37)
description: API reference for qiskit.opflow.expectations.AerPauliExpectation in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.expectations.AerPauliExpectation
---

# AerPauliExpectation

<Class id="qiskit.opflow.expectations.AerPauliExpectation" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/opflow/expectations/aer_pauli_expectation.py" signature="AerPauliExpectation" modifiers="class">
  Bases: [`qiskit.opflow.expectations.expectation_base.ExpectationBase`](qiskit.opflow.expectations.ExpectationBase "qiskit.opflow.expectations.expectation_base.ExpectationBase")

  An Expectation converter for using Aer’s operator snapshot to take expectations of quantum state circuits over Pauli observables.

  ## Methods Defined Here

  <span id="qiskit-opflow-expectations-aerpauliexpectation-compute-variance" />

  ### compute\_variance

  <Function id="qiskit.opflow.expectations.AerPauliExpectation.compute_variance" signature="AerPauliExpectation.compute_variance(exp_op)">
    Compute the variance of the expectation estimator. Because Aer takes this expectation with matrix multiplication, the estimation is exact and the variance is always 0, but we need to return those values in a way which matches the Operator’s structure.

    **Parameters**

    **exp\_op** ([`OperatorBase`](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The full expectation value Operator after sampling.

    **Return type**

    `Union`\[`list`, `float`]

    **Returns**

    The variances or lists thereof (if exp\_op contains ListOps) of the expectation value estimation, equal to 0.
  </Function>

  <span id="qiskit-opflow-expectations-aerpauliexpectation-convert" />

  ### convert

  <Function id="qiskit.opflow.expectations.AerPauliExpectation.convert" signature="AerPauliExpectation.convert(operator)">
    Accept an Operator and return a new Operator with the Pauli measurements replaced by AerSnapshot-based expectation circuits.

    **Parameters**

    **operator** ([`OperatorBase`](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The operator to convert. If it contains non-hermitian terms, the operator is decomposed into hermitian and anti-hermitian parts.

    **Return type**

    [`OperatorBase`](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")

    **Returns**

    The converted operator.
  </Function>
</Class>

